--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,16 +36,16 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository }}/utility-image
+            ghcr.io/${{ github.repository_owner }}/utility-image
           tags: |
             type=schedule,pattern={{date 'YYYYMMDD'}}
             type=semver,pattern={{version}}
-            type=raw,value=${{ github.run_number }}
+            type=raw,value=${{ github.run_id }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          platforms: "linux/amd64,linux/arm64"
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
+      # - name: Build and push
+      #   uses: docker/build-push-action@v3
+      #   with:
+      #     context: .
+      #     platforms: "linux/amd64,linux/arm64"
+      #     push: true
+      #     tags: ${{ steps.meta.outputs.tags }}
