--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - "apt-packages"
+      - "apt-packages.txt"
       - "Dockerfile"
     branches:
       - "main"
